@@ -3051,7 +3051,8 @@ def test_filter_contamination():
     status, out, err = utils.runscript(
         script, args_contam, in_dir)
 
-    # assert '0.017702448210' in out
+    assert '-0.0' not in out
+    assert '0.017702448210' in out
 
 
 def test_version():
